--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,3 +20,18 @@ model_trainer:
   train_data_path: artifacts/data_transformation/train.csv
   test_data_path: artifacts/data_transformation/test.csv
   model_name: model.joblib
+
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  test_data_path: artifacts/data_transformation/test.csv
+  models:
+    rnn:
+      model_path: artifacts/model_trainer/rnn/model.joblib.joblib
+      tokenizer_path: artifacts/model_trainer/rnn/model.joblib_tokenizer.joblib
+    lstm:
+      model_path: artifacts/model_trainer/lstm/model.joblib.joblib
+      tokenizer_path: artifacts/model_trainer/lstm/model.joblib_tokenizer.joblib
+    gru:
+      model_path: artifacts/model_trainer/gru/model.joblib.joblib
+      tokenizer_path: artifacts/model_trainer/gru/model.joblib_tokenizer.joblib
+  metric_file_name: artifacts/model_evaluation/metrics.json
